--- a/Jog/Views/post.cshtml
+++ b/Jog/Views/post.cshtml
@@ -50,7 +50,7 @@
                 </article>
             </div>
             <!-- 多说评论框 start -->
-            <div class="ds-thread" data-thread-key="@Model.Id" data-title="@Model.Title" data-url="@ViewBag.CurrentUrl"></div>
+            <div class="ds-thread" data-thread-key="@Model.Id" data-title="@Model.Title" data-url="@(ViewBag.Settings.Value.SiteUrl.ToString() + Model.GetLink())"></div>
             <!-- 多说评论框 end -->
             <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
             <script type="text/javascript">
